--- a/css/packageplan.css
+++ b/css/packageplan.css
@@ -25,7 +25,7 @@ body {
 
 .pack-logo {
   width: 130px;
-  height: 130px;
+  max-height: 130px;
   object-fit: cover;
   overflow: hidden;
   background-color: var(--text-whit);
@@ -39,7 +39,7 @@ body {
   color: var(--text-whit);
   width: 100%;
   font-family: "Roboto", sans-serif;
-  font: 22px/30px "Roboto", sans-serif;
+  font: 20px/30px "Roboto", sans-serif;
   font-weight: 400;
   text-align: center;
   padding: 4px;
