--- a/css/packageplan.css
+++ b/css/packageplan.css
@@ -6,10 +6,15 @@
   --onepay-color: #70c056;
   --kbz-color: #0053ab;
   --text-whit: #ffffff;
+  --lable-color: 237, 33, 72;
 }
 
 body {
   background-color: var(--main-bg);
+}
+
+.container {
+  max-width: 720px;
 }
 
 .logo {
@@ -19,14 +24,12 @@ body {
 }
 
 .pack-item {
-  margin: 0px auto;
   display: block;
 }
 
 .pack-logo {
-  width: 130px;
-  max-height: 130px;
-  object-fit: cover;
+  width: 100%;
+  height: auto;
   overflow: hidden;
   background-color: var(--text-whit);
 }
@@ -72,4 +75,28 @@ a:hover {
   height: auto;
   object-fit: cover;
   bottom: 0;
+}
+
+.des-lable {
+  position: absolute;
+  background-color: rgba(var(--lable-color), 0.9);
+  width: 64px;
+  color: var(--text-whit);
+  font-family: "Roboto", sans-serif;
+  font: 18px/30px "Roboto", sans-serif;
+  font-weight: 400;
+  padding: 4px;
+  text-align: center;
+  box-shadow: 0px 3px 6px #0000005c;
+  right: 15px;
+}
+
+@media (max-width: 320px) {
+  .pack-text {
+    font: 16px/30px "Roboto", sans-serif;
+  }
+  .des-lable {
+    width: 40px;
+    font: 14px/20px "Roboto", sans-serif;
+  }
 }
